--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "react2electron",
+  "main": "public/electron.js",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "electron-is-dev": "^0.3.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5"
@@ -11,6 +13,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\""
+  },
+  "devDependencies": {
+    "concurrently": "^4.0.1",
+    "electron": "^2.0.8",
+    "electron-builder": "^20.28.3",
+    "wait-on": "^3.0.1"
   }
 }
